# tlsn

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  help.html  search-index.js  settings.html  src-files.js  tlsn_cargo.rs
actors/actor-garble/: Cargo.toml
actors/actor-garble/src/: lib.rs
authdecode/: Cargo.toml
authdecode/benches/: halo2_proof_generation.rs
authdecode/src/: encodings.rs  lib.rs  utils.rs
authdecode/src/backend/: mod.rs
authdecode/src/backend/halo2/: circuit.rs  mod.rs  onetimesetup.rs  prover.rs  utils.rs  verifier.rs
authdecode/src/backend/mock/: mod.rs
authdecode/src/halo2_backend/: prover.rs
authdecode/src/prover/: backend.rs  error.rs  mod.rs  prover.rs  state.rs
authdecode/src/verifier/: mod.rs  state.rs  verifier.rs
crates/benches/browser-prover-wasm/: Cargo.toml  rust-toolchain.toml
crates/benches/browser-prover-wasm/.cargo/: config.toml
crates/benches/browser-prover-wasm/pkg/: index.js  worker.js
crates/components/authdecode/single-range/: Cargo.toml
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs  notarize.rs
mpc/: Cargo.toml
mpc-core/: Cargo.toml
mpc-core/src/proto/core/: ot.rs
mpc-core/tests/: half_gate.rs
tls/prover/: Cargo.toml
tls/prover/src/: buffer.rs  config.rs  handle.rs  lib.rs  socket.rs  state.rs
tls/prover/src/prover/: mod.rs
tls/prover/tests/: prover.rs  prover_send_request.rs
tlsn/: Cargo.toml  all.html  index.html  struct.Error.html  struct.Session.html  struct.SessionDriver.html  struct.SessionHandle.html  type.Result.html
tlsn/benches/binary/: Cargo.toml  bench.sh  tree
tlsn/benches/binary/src/: helpers.rs
tlsn/benches/browser-prover-core/: Cargo.toml
tlsn/benches/browser-prover-native/: Cargo.toml
tlsn/benches/browser-prover-native/src/: lib.rs  native.rs
tlsn/benches/browser-prover-wasm/: Cargo.toml
tlsn/benches/browser-prover-wasm/src/: lib.rs
tlsn/config/: index.html
tlsn/config/prove/: index.html  struct.ProveConfig.html  struct.ProveConfigBuilder.html  struct.ProveConfigError.html  struct.ProveRequest.html
tlsn/config/prover/: index.html  struct.ProverConfig.html  struct.ProverConfigBuilder.html  struct.ProverConfigError.html
tlsn/config/tls/: index.html  struct.TlsClientConfig.html  struct.TlsConfigBuilder.html  struct.TlsConfigError.html
tlsn/config/tls_commit/: enum.TlsCommitProtocolConfig.html  index.html  struct.TlsCommitConfig.html  struct.TlsCommitConfigBuilder.html  struct.TlsCommitConfigError.html  struct.TlsCommitRequest.html
tlsn/config/tls_commit/mpc/: enum.NetworkSetting.html  index.html  struct.MpcTlsConfig.html  struct.MpcTlsConfigBuilder.html  (+1 more)
tlsn/config/verifier/: index.html  struct.VerifierConfig.html  struct.VerifierConfigBuilder.html  struct.VerifierConfigError.html
tlsn/connection/: enum.CertBinding.html  enum.HandshakeVerificationError.html  enum.KeyType.html  enum.ServerName.html  enum.SignatureAlgorithm.html  enum.TlsVersion.html  index.html  struct.CertBindingV1_2.html  struct.ConnectionInfo.html  struct.DnsName.html  struct.HandshakeData.html  struct.InvalidDnsNameError.html  struct.ServerEphemKey.html  struct.ServerSignature.html  struct.TranscriptLength.html  struct.VerifyData.html
tlsn/examples/: Cargo.toml  simple_verifier.rs  twitter_dm.rs  zkitter_twitter_name.rs
tlsn/examples/discord/: discord_dm.rs
tlsn/examples/simple/: simple_prover.rs
tlsn/examples/twitter/: twitter_dm.rs
tlsn/hash/: index.html  struct.Blake3.html  struct.Blinded.html  struct.Blinder.html  struct.Hash.html  struct.HashAlgId.html  struct.HashProvider.html  struct.HashProviderError.html  struct.Keccak256.html  struct.Sha256.html  struct.TypedHash.html  trait.HashAlgorithm.html
tlsn/prover/: Cargo.toml  index.html  struct.Prover.html  struct.ProverControl.html  struct.ProverFuture.html  struct.ProverOutput.html  struct.TlsConnection.html
tlsn/prover/src/: config.rs  lib.rs  socket.rs  state.rs  tls_conn.rs
tlsn/prover/state/: index.html  struct.CommitAccepted.html  struct.Committed.html  struct.Connected.html  struct.Initialized.html  trait.ProverState.html
tlsn/prover/tests/: prover.rs
tlsn/tests-integration/: Cargo.toml
tlsn/tests-integration/tests/: test.rs
tlsn/tlsn-core/: Cargo.toml
tlsn/tlsn-core/src/: transcript.rs
tlsn/tlsn-core/tests/: api.rs
tlsn/tlsn-formats/src/: lib.rs  unknown.rs
tlsn/tlsn-notary/: Cargo.toml
tlsn/tlsn-notary/src/: config.rs  error.rs  lib.rs
tlsn/tlsn-notary/tests/: test.rs
tlsn/tlsn-prover/: Cargo.toml
tlsn/tlsn-prover/src/: config.rs  lib.rs  state.rs  tls_conn.rs
tlsn/tlsn-prover/tests/: prover.rs
tlsn/tlsn-server-fixture/: Cargo.toml
tlsn/transcript/: enum.ContentType.html  enum.Direction.html  enum.TranscriptCommitment.html  enum.TranscriptCommitmentKind.html  enum.TranscriptSecret.html  index.html  struct.CompressedPartialTranscript.html  struct.InvalidSubsequence.html  struct.PartialTranscript.html  struct.Record.html  struct.Subsequence.html  struct.TlsTranscript.html  struct.Transcript.html  struct.TranscriptCommitConfig.html  struct.TranscriptCommitConfigBuilder.html  struct.TranscriptCommitConfigBuilderError.html  struct.TranscriptCommitRequest.html  struct.TranscriptProof.html  struct.TranscriptProofBuilder.html  struct.TranscriptProofBuilderError.html  struct.TranscriptProofError.html
tlsn/transcript/hash/: fn.hash_plaintext.html  index.html  struct.PlaintextHash.html  struct.PlaintextHashSecret.html
tlsn/verifier/: index.html  struct.ServerCertVerifier.html  struct.SessionInfo.html  struct.Verifier.html  struct.VerifierOutput.html
tlsn/verifier/state/: index.html  struct.CommitAccepted.html  struct.CommitStart.html  struct.Committed.html  struct.Initialized.html  struct.Verify.html  trait.VerifierState.html
tlsn/webpki/: enum.ServerCertVerifierError.html  index.html  struct.CertificateDer.html  struct.PemError.html  struct.PrivateKeyDer.html  struct.RootCertStore.html  struct.ServerCertVerifier.html
utils-aio/: Cargo.toml
utils-aio/src/: duplex_latency.rs  lib.rs
wasm/: .gitignore  Cargo.toml  index.js  package.json
wasm/src/: lib.rs
(+466 files in other folders)
