[workspace]
members = [
    "tlsn-core",
    "tlsn-common",
    "tlsn-verifier",
    "tlsn-prover",
    "tlsn-formats",
    "tlsn-server-fixture",
    "tlsn-notary-client",
    "tests-integration",
    "examples",
    "benches/binary",
    "benches/library",
    "benches/browser-prover-native",
    "benches/browser-prover-wasm",
    "benches/browser-prover-core",
]
resolver = "2"

[workspace.dependencies]
tlsn-core = { path = "tlsn-core" }
tlsn-common = { path = "tlsn-common" }
tlsn-prover = { path = "tlsn-prover" }
tlsn-verifier = { path = "tlsn-verifier" }
tlsn-server-fixture = { path = "tlsn-server-fixture" }
tlsn-formats = { path = "tlsn-formats" }
tlsn-notary-client = { path = "tlsn-notary-client" }

tlsn-tls-core = { path = "../components/tls/tls-core" }
tlsn-tls-mpc = { path = "../components/tls/tls-mpc" }
tlsn-tls-client = { path = "../components/tls/tls-client" }
tlsn-tls-client-async = { path = "../components/tls/tls-client-async" }
tls-server-fixture = { path = "../components/tls/tls-server-fixture" }
uid-mux = { path = "../components/uid-mux" }

tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "51f313d" }
tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "51f313d" }
#tlsn-utils = { path = "../../tlsn-utils/utils" }
#tlsn-utils-aio = { path = "../../tlsn-utils/utils-aio" }
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "51f313d" }

mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-garble-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }
mpz-share-conversion = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "9f7403b" }

futures = "0.3"
tokio-util = "0.7"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = "1"

signature = "2"
p256 = "0.13"
rs_merkle = "1"
rand_chacha = "0.3"
rand = "0.8"
rand_core = "0.6"
webpki-roots = "0.26"

derive_builder = "0.12"
thiserror = "1"
serde = "1"
bincode = "1"
hex = "0.4"
bytes = "1.4"
opaque-debug = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"
rstest = "0.17"

web-time = "0.2"

#[patch."https://github.com/tlsnotary/tlsn-utils"]
#tlsn-utils = { path = "../../tlsn-utils/utils" }
#tlsn-utils-aio = { path = "../../tlsn-utils/utils-aio" }


[patch.crates-io]
ahash = { git = "https://github.com/tkaitchuck/aHash", rev = "v0.8.11" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "curve25519-4.1.3" }

