[package]
name = "pop-utils-aio"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils_aio"

[features]
default = []
codec = ["tokio-util", "prost"]

[dependencies]
bytes = "1.1.0"
prost = { version = "0.9", optional = true }
tokio-util = { version = "0.7.1", default-features = false, features = [
    "codec",
], optional = true }
futures = "0.3"
futures-util = "0.3"
