[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlsn-tls-client = { path = "../tls-client" }
tlsn-utils-aio = { path = "../../utils/utils-aio" }
tlsn-core = { path = "../../tlsn/tlsn-core" }
tls-mpc = { path = "../tls-mpc" }
actor-ot = { path = "../../actors/actor-ot"}

futures.workspace = true
thiserror.workspace = true
webpki-roots.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["io", "compat"] }
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
