[package]
name = "tests-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
tlsn-prover.workspace = true
tlsn-notary.workspace = true
console-subscriber = "0.1"

hyper = { version = "0.14", features = ["client", "http1"] }

p256 = { workspace = true, features = ["ecdsa"] }

tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
] }
tokio-util.workspace = true
