[package]
name = "tlsn-server-fixture"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = [
    "fixtures",
    "axum",
    "anyhow",
    "futures",
    "futures-rustls",
    "hyper",
    "hyper-util",
    "tokio",
    "tokio-util",
    "tower-service",
]
fixtures = []

[dependencies]
axum = { version = "0.7", optional = true }
anyhow = { version = "1.0", optional = true }
futures = { workspace = true, optional = true }
futures-rustls = { version = "0.26", optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, features = ["full"], optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
tokio-util = { workspace = true, features = ["compat", "io"], optional = true }
tower-service = { version = "0.3.2", optional = true }

[[bin]]
name = "main"
path = "src/main.rs"
